<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
		<java.version>17</java.version>
		<node.version>v18.18.0</node.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
							<id>copy-resources</id>
							<phase>process-classes</phase>
							<goals>
									<goal>copy-resources</goal>
							</goals>
							<configuration>
									<outputDirectory>${basedir}/target/classes/static</outputDirectory>
									<resources>
											<resource>
													<directory>frontend/build</directory>
											</resource>
									</resources>
							</configuration>
						</execution>
					</executions>
			</plugin>

			<plugin>
				<groupId>com.github.eirslett</groupId>
				<artifactId>frontend-maven-plugin</artifactId>
				<version>${frontend-maven-plugin.version}</version>
				<configuration>
						<workingDirectory>frontend</workingDirectory>
						<nodeVersion>${node.version}</nodeVersion>
						<npmVersion>10.8.1</npmVersion>
				</configuration>
				<executions>
					<execution>
					<id>install node</id>
					<goals>
							<goal>install-node-and-npm</goal>
					</goals>
					</execution>
					<execution>
							<id>npm install</id>
							<goals>
									<goal>npm</goal>
							</goals>
							<phase>generate-resources</phase>
					</execution>
					<execution>
						<id>npm test</id>
						<goals>
								<goal>npm</goal>
						</goals>
						<phase>test</phase>
						<configuration>
								<arguments>test</arguments>
								<environmentVariables>
										<CI>true</CI>
								</environmentVariables>
						</configuration>
					</execution>
					<execution>
						<id>npm build</id>
						<goals>
								<goal>npm</goal>
						</goals>
						<phase>compile</phase>
						<configuration>
								<arguments>run build</arguments>
						</configuration>
					</execution>
				</executions>
        </plugin>
		</plugins>
	</build>

</project>
